--- a/Hv/estilohv/estilohv.css
+++ b/Hv/estilohv/estilohv.css
@@ -1,17 +1,16 @@
+body {
+    font-family: Arial, Helvetica, sans-serif;
+    max-width: 500px;
+    margin: auto;
+    min-height: 100%;
+    background-attachment: fixed;
+    background-size: cover;
+    display: table-cell;
+    vertical-align: middle;
 
-    body {
-        font-family: Arial, Helvetica, sans-serif;
-        max-width: 500px;
-        margin: auto;
-        min-height: 100%;
-        background-attachment: fixed;
-        background-size: cover;
-        display: table-cell;
-        vertical-align: middle;
-    
-    }
+}
 
-    
+
 .nombre {
 
     position: absolute;
@@ -19,25 +18,25 @@
     right: 0%;
     top: 3.42%;
     bottom: 90.43%;
-    
+
     font-family: 'Inter';
     font-style: normal;
     font-weight: 500;
     font-size: 41.8446px;
     line-height: 150%;
     /* identical to box height, or 63px */
-    
+
     display: flex;
     align-items: center;
     text-align: center;
     letter-spacing: -0.011em;
-    
+
     color: #4E626D;
 
 }
 
 .secarrera {
-  
+
 
     box-sizing: border-box;
     position: absolute;
@@ -50,18 +49,18 @@
 }
 
 .carrera {
-    
+
 
     position: absolute;
-    width: calc(146% - 581px/2 + 74.5px);
+    width: calc(203% - 581px/2 + 74.5px);
     /* height: 168px; */
-    left: calc(80% - 581px/2 + 74.5px);
-    top: calc(76% - 59px/2 - 421.5px);
+    left: calc(191% - 59px/2 - 421.5px);
+    width: calc(147% - 581px/2 + 74.5px);
     font-family: Arial, Helvetica, sans-serif;
     font-style: normal;
     font-weight: 400;
-    font-size: 20px;
-    line-height: 46px;
+    font-size: 17px;
+    line-height: 0px;
     text-align: center;
     color: #000000;
 }
@@ -69,40 +68,190 @@
 .hcarrera {
 
     text-align: justify;
-    color:#4e626d;
+    color: #4e626d;
     text-shadow: 2px 2px 3px black;
 
 }
 
+.ar1{
+    position: absolute;
+    left: 7%;
+    right: 7.71%;
+    top: 37.76%;
+    bottom: 23.45%;
+    background: #86A7BB;
+}
+.s1 {
+    /* Vector */
 
-    .s1{
-        /* Vector */
+
+    position: absolute;
+
+    left: 2.15%;
+    right: 78.71%;
+    top: 1.76%;
+    bottom: 0%;
+
+    background: #86A7BB;
+}
+
+.h1 {
+       position: absolute;
+    width: 270px;
+    left: 3.96%;
+    right: 74.72%;
+    top: 1.61%;
+    bottom: 1.89%;
+    background: #4E626D;
+
+    background: #4E626D;
+}
+
+.fotoperfil {
+    position: absolute;
+    width: 200px;
+    height: 200px;
+    left: 38px;
+    top: 13px;
+}
+
+.footeracerca {
+    position: absolute;
+    left: 29.24%;
+    right: 3.06%;
+    top: 19.34%;
+    bottom: 76.27%;
+
+    background: #4E626D;
+    border-radius: 30px;
+    text-align: center;
+    font-size: 20px;
+    text-transform: uppercase;
+
+}
+
+.hacerca {
+    color: #ffff;
+    line-height: 0;
+
+}
+
+.articacerta{
+    position: absolute;
+left: 29.1%;
+right: 3.06%;
+top: 22.88%;
+bottom: 61.82%;
+height: auto;
+
+font-family: 'Inter';
+font-style: normal;
+font-weight: 500;
+font-size: 16.6582px;
+line-height: 150%;
+/* or 25px */
+
+letter-spacing: -0.011em;
+
+color: #000000;
+}
+
+.pacerca{
+    text-align: justify;
+}
 
 
-position: absolute;
-left: 2.15%;
-right: 72.71%;
-top: 1.76%;
-bottom: 14.45%;
+.footerhabilidades{
+    position: absolute;
+    left: 29.1%;
+    right: 3.06%;
+    top: 38.87%;
+    bottom: 56.64%;
+    
+    background: #4E626D;
+    border-radius: 30px;
+    text-align: center;
+    font-size: 20px;
+    text-transform: uppercase;
 
-background: #86A7BB;
-    }
 
-    .h1{
-        position: absolute;
-        width: 270px;
-left: 3.96%;
-right: 74.72%;
-top: 3.61%;
-bottom: 16.89%;
 
-background: #4E626D;
-    }
+}
 
-    .fotoperfil{
-        position: absolute;
-        width: 200px;
-        height: 200px;
-        left: 38px;
-        top: 13px;
-    }
+.shabilidades{
+    box-sizing: border-box;
+    position: absolute;
+    width: calc(50% - 581px/2 + 74.5px);
+    height: 333px;
+    left: calc(30% - 581px/2 + 74.5px);
+    top: calc(73% - 59px/2 - 421.5px);
+    border-radius: 20px;
+  }
+.hhabilidades{
+    color: #ffff;
+    line-height: 0;
+    text-align: center;
+}
+
+.artihabilidades{
+    position: absolute;
+    left: 29.1%;
+    right: 3.06%;
+    top: 45%;
+    bottom: 61.82%;
+    
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16.6582px;
+    line-height: 150%;
+    /* or 25px */
+    
+    letter-spacing: -0.011em;
+    
+    color: #000000;
+
+}
+
+.cirhab {
+    height: 10px;
+    width: 10px;
+    background-color: #4e626d;
+    border-radius: 50%;
+    display: inline-block;
+  }
+
+  .column {
+    box-sizing: border-box;
+    float: left;
+    width: 15%;
+    padding: 10px;
+    height: 300px; /* Should be removed. Only for demonstration */
+  }
+  
+  .row:after {
+    box-sizing: border-box;
+    content: "";
+    display: table;
+    clear: both;
+  }
+
+  #contenedor {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+  #principal {
+    width: 38%;
+    text-align: center;
+    
+  }
+  #sidebar {
+    width: 43%;
+    font-size: 12px;
+    color: currentcolor;
+    text-shadow: 2px 1px 2px white;
+  }
+
+
+ 
