--- a/Hv/estilohv/estilohv.css
+++ b/Hv/estilohv/estilohv.css
@@ -14,7 +14,7 @@ body {
 .nombre {
 
     position: absolute;
-    left: 30%;
+    left: 50%;
     right: 0%;
     top: 3.42%;
     bottom: 90.43%;
@@ -79,7 +79,7 @@ body {
     right: 7.71%;
     top: 37.76%;
     bottom: 23.45%;
-    background: #86A7BB;
+    
 }
 .s1 {
     /* Vector */
@@ -89,8 +89,8 @@ body {
 
     left: 2.15%;
     right: 78.71%;
-    top: 1.76%;
-    bottom: 0%;
+    top: -1.76%;
+    bottom: -19%;
 
     background: #86A7BB;
 }
@@ -120,7 +120,7 @@ body {
     left: 29.24%;
     right: 3.06%;
     top: 19.34%;
-    bottom: 76.27%;
+    bottom: 75.27%;
 
     background: #4E626D;
     border-radius: 30px;
@@ -216,7 +216,7 @@ color: #000000;
 .cirhab {
     height: 10px;
     width: 10px;
-    background-color: #4e626d;
+    background-color: #135b82;
     border-radius: 50%;
     display: inline-block;
   }
@@ -254,4 +254,154 @@ color: #000000;
   }
 
 
- 
+  .footereduca {
+    position: absolute;
+    left: 29.24%;
+    right: 3.06%;
+    top: 43.34%;
+    bottom: 50.27%;
+    background: #4E626D;
+    border-radius: 30px;
+    text-align: center;
+    font-size: 20px;
+    text-transform: uppercase;
+
+}
+
+.heduca {
+    color: #ffff;
+    line-height: 0;
+
+}
+
+.articeduca{
+    position: absolute;
+left: 29.1%;
+right: 3.06%;
+top: 50.88%;
+bottom: 61.82%;
+height: auto;
+
+font-family: 'Inter';
+font-style: normal;
+font-weight: 500;
+font-size: 16.6582px;
+line-height: 150%;
+/* or 25px */
+
+letter-spacing: -0.011em;
+
+color: #000000;
+}
+
+.pacerca{
+    text-align: justify;
+}
+
+.footrefe {
+    position: absolute;
+    left: 29.24%;
+    right: 3.06%;
+    top: 69.34%;
+    bottom: 24.27%;
+    background: #4E626D;
+    border-radius: 30px;
+    text-align: center;
+    font-size: 20px;
+    text-transform: uppercase;
+}
+
+.hrefe {
+    color: #ffff;
+    line-height: 0;
+
+}
+
+.articrefe{
+    position: absolute;
+    left: 29.1%;
+    right: 3.06%;
+    top: 73.88%;
+    bottom: 61.82%;
+    height: auto;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16.6582px;
+    line-height: 150%;
+    letter-spacing: -0.011em;
+    color: #000000;
+}
+
+.pacerca{
+    text-align: justify;
+}
+.footerexp{
+    position: absolute;
+    left: 29.24%;
+    right: 3.06%;
+    top: 96.34%;
+    bottom: -2.73%;
+    background: #4E626D;
+    border-radius: 30px;
+    text-align: center;
+    font-size: 20px;
+    text-transform: uppercase;
+}
+
+.hexp{
+    color: #ffff;
+    line-height: 0;
+
+}
+
+.articexp{
+    position: absolute;
+    left: 29.1%;
+    right: 3.06%;
+    top:101.88%;
+    bottom: 61.82%;
+    height: auto;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16.6582px;
+    line-height: 150%;
+    letter-spacing: -0.011em;
+    color: #000000;
+}
+
+.pacerca{
+    text-align: justify;
+}
+
+
+#contenedor {
+    text-align: left;
+    width: 100%;
+    margin: auto;
+   }
+   
+   #lateral {
+    width: 50%;  /* Este será el ancho que tendrá tu columna */
+   
+    float:right; /* Aquí determinas de lado quieres quede esta "columna" */
+   }
+   
+   #principal2 {
+    width: 50%;
+    float: left;
+    
+
+   }
+   /* Para limpiar los floats */
+   .clearfix:after {
+     content: "";
+     display: table;
+     clear: both;
+   }
+
+   .pexp{
+    font-size: 12px;
+    text-align: justify;
+   }
