--- a/Hv/estilohv/estilohv.css
+++ b/Hv/estilohv/estilohv.css
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 body {
     font-family: Arial, Helvetica, sans-serif;
     max-width: 500px;
@@ -55,15 +54,15 @@ body {
     position: absolute;
     width: calc(203% - 581px/2 + 74.5px);
     /* height: 168px; */
-    left: calc(191% - 59px/2 - 421.5px);
-    width: calc(147% - 581px/2 + 74.5px);
+    left: calc(145% - 59px/2 - 421.5px);
     font-family: Arial, Helvetica, sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 17px;
-    line-height: 0px;
+    line-height: 43px;
     text-align: center;
     color: #000000;
+    top: inherit;
 }
 
 .hcarrera {
@@ -98,22 +97,20 @@ body {
 
 .h1 {
        position: absolute;
-    width: 270px;
-    left: 3.96%;
+    width: 340px;
+    left: 6.96%;
     right: 74.72%;
     top: 1.61%;
     bottom: 1.89%;
-    background: #4E626D;
-
     background: #4E626D;
 }
 
 .fotoperfil {
     position: absolute;
-    width: 200px;
-    height: 200px;
-    left: 38px;
-    top: 13px;
+    width: 250px;
+    height: 250px;
+    left: 50px;
+    top: 13px;;
 }
 
 .footeracerca {
@@ -192,6 +189,7 @@ color: #000000;
     color: #ffff;
     line-height: 0;
     text-align: center;
+     font-size: 24px;
 }
 
 .artihabilidades{
@@ -215,9 +213,16 @@ color: #000000;
 }
 
 .cirhab {
-    height: 10px;
-    width: 10px;
-    background-color: #135b82;
+    height: 16px;
+    width: 16px;
+    background-color: #1fa7cf;
+    border-radius: 50%;
+    display: inline-block;
+  }
+  .cirhab2 {
+    height: 16px;
+    width: 16px;
+    background-color: #ffffff;
     border-radius: 50%;
     display: inline-block;
   }
@@ -243,15 +248,15 @@ color: #000000;
     flex-wrap: wrap;
   }
   #principal {
-    width: 38%;
+   	    width: 30%;
     text-align: center;
     
   }
   #sidebar {
-    width: 43%;
-    font-size: 12px;
-    color: currentcolor;
-    text-shadow: 2px 1px 2px white;
+   width: 69%;
+    font-size: 16.5px;
+    color:floralwhite;  
+    text-shadow: 2px 1px 2px black;
   }
 
 
@@ -406,178 +411,3 @@ color: #000000;
     font-size: 12px;
     text-align: justify;
    }
-=======
-body {
-    font-family: Arial, Helvetica, sans-serif;
-    max-width: 500px;
-    margin: auto;
-    min-height: 100%;
-    background-attachment: fixed;
-    background-size: cover;
-    display: table-cell;
-    vertical-align: middle;
-
-}
-
-
-.nombre {
-
-    position: absolute;
-    left: 30%;
-    right: 0%;
-    top: 3.42%;
-    bottom: 90.43%;
-
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 500;
-    font-size: 41.8446px;
-    line-height: 150%;
-    /* identical to box height, or 63px */
-
-    display: flex;
-    align-items: center;
-    text-align: center;
-    letter-spacing: -0.011em;
-
-    color: #4E626D;
-
-}
-
-.secarrera {
-
-
-    box-sizing: border-box;
-    position: absolute;
-    width: calc(50% - 581px/2 + 74.5px);
-    height: 333px;
-    left: calc(30% - 581px/2 + 74.5px);
-    top: calc(73% - 59px/2 - 421.5px);
-    border-radius: 20px;
-
-}
-
-.carrera {
-
-
-    position: absolute;
-    width: calc(146% - 581px/2 + 74.5px);
-    /* height: 168px; */
-    left: calc(80% - 581px/2 + 74.5px);
-    top: calc(76% - 59px/2 - 421.5px);
-    font-family: Arial, Helvetica, sans-serif;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 20px;
-    line-height: 46px;
-    text-align: center;
-    color: #000000;
-}
-
-.hcarrera {
-
-    text-align: justify;
-    color: #4e626d;
-    text-shadow: 2px 2px 3px black;
-
-}
-
-
-.s1 {
-    /* Vector */
-
-
-    position: absolute;
-    left: 2.15%;
-    right: 72.71%;
-    top: 1.76%;
-    bottom: 14.45%;
-
-    background: #86A7BB;
-}
-
-.h1 {
-    position: absolute;
-    width: 270px;
-    left: 3.96%;
-    right: 74.72%;
-    top: 3.61%;
-    bottom: 16.89%;
-
-    background: #4E626D;
-}
-
-.fotoperfil {
-    position: absolute;
-    width: 200px;
-    height: 200px;
-    left: 38px;
-    top: 13px;
-}
-
-.footeracerca {
-    position: absolute;
-    left: 29.24%;
-    right: 3.06%;
-    top: 19.34%;
-    bottom: 76.27%;
-
-    background: #4E626D;
-    border-radius: 30px;
-    text-align: center;
-    font-size: 20px;
-    text-transform: uppercase;
-
-}
-
-.hacerca {
-    color: #ffff;
-    line-height: 0;
-
-}
-
-.articacerta{
-    position: absolute;
-left: 29.1%;
-right: 3.06%;
-top: 25.88%;
-bottom: 61.82%;
-
-font-family: 'Inter';
-font-style: normal;
-font-weight: 500;
-font-size: 16.6582px;
-line-height: 150%;
-/* or 25px */
-
-letter-spacing: -0.011em;
-
-color: #000000;
-}
-
-.pacerca{
-    text-align: justify;
-}
-
-
-.footerhabilidades{
-    position: absolute;
-    left: 29.1%;
-    right: 3.06%;
-    top: 38.87%;
-    bottom: 56.64%;
-    
-    background: #4E626D;
-    border-radius: 30px;
-    text-align: center;
-    font-size: 20px;
-    text-transform: uppercase;
-
-
-
-}
-.hhabilidades{
-    color: #ffff;
-    line-height: 0;
-}
->>>>>>> 214ba51f1544b7013687a951083859cae6fb55b0
