--- a/Hv/estilohv/estilohv.css
+++ b/Hv/estilohv/estilohv.css
@@ -1,76 +1,79 @@
+
+@media screen and (min-width: 800px) {
+    .container {
+      margin: 1em 2em;
+    }
+  }
+
 body {
     font-family: Arial, Helvetica, sans-serif;
-    max-width: 500px;
-    margin: auto;
-    min-height: 100%;
-    background-attachment: fixed;
-    background-size: cover;
-    display: table-cell;
-    vertical-align: middle;
-
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
 }
 
 
 .nombre {
-
     position: absolute;
-    left: 50%;
-    right: 0%;
+    left: calc(63% - 581px/2 + 74.5px);
+    /* right: 0%; */
     top: 3.42%;
-    bottom: 90.43%;
-
+    /* bottom: 90.43%; */
     font-family: 'Inter';
     font-style: normal;
     font-weight: 500;
     font-size: 41.8446px;
-    line-height: 150%;
-    /* identical to box height, or 63px */
-
+    /* line-height: 150%; */
     display: flex;
-    align-items: center;
+    /* align-items: center; */
     text-align: center;
-    letter-spacing: -0.011em;
-
+    /* letter-spacing: -0.011em; */
     color: #4E626D;
+    flex-wrap: wrap;
 
 }
 
-.secarrera {
 
-
-    box-sizing: border-box;
-    position: absolute;
-    width: calc(50% - 581px/2 + 74.5px);
-    height: 333px;
-    left: calc(30% - 581px/2 + 74.5px);
-    top: calc(73% - 59px/2 - 421.5px);
-    border-radius: 20px;
-
-}
 
 .carrera {
 
 
     position: absolute;
-    width: calc(203% - 581px/2 + 74.5px);
-    /* height: 168px; */
-    left: calc(145% - 59px/2 - 421.5px);
-    font-family: Arial, Helvetica, sans-serif;
+    left: calc(63% - 581px/2 + 74.5px);
+    /* right: 0%; */
+    top: 15.42%;
+    /* bottom: 90.43%; */
+    font-family: 'Inter';
     font-style: normal;
-    font-weight: 400;
-    font-size: 17px;
-    line-height: 43px;
+    font-weight: 50 0;
+    font-size: 20.8446px;
+    /* line-height: 150%; */
+    display: flex;
+    /* align-items: center; */
     text-align: center;
-    color: #000000;
-    top: inherit;
+    /* letter-spacing: -0.011em; */
+    color: #4E626D;
+    flex-wrap: wrap;
 }
 
 .hcarrera {
 
-    text-align: justify;
-    color: #4e626d;
-    text-shadow: 2px 2px 3px black;
-
+    position: absolute;
+    left: calc(68% - 581px/2 + 74.5px);
+    /* right: 0%; */
+    top: 10.42%;
+    /* bottom: 90.43%; */
+    
+    font-style: normal;
+    font-weight: 50 0;
+    font-size:20.8446px;
+    /* line-height: 150%; */
+    display: flex;
+    /* align-items: center; */
+    text-align: center;
+    /* letter-spacing: -0.011em; */
+    color: #4E626D;
+    flex-wrap: wrap;
 }
 
 .ar1{
@@ -86,30 +89,28 @@ body {
 
 
     position: absolute;
-
-    left: 2.15%;
-    right: 78.71%;
-    top: -1.76%;
-    bottom: -19%;
-
+    left: 0;
+    right: 76%;
+    top: 0;
+    bottom: -25%;
     background: #86A7BB;
 }
 
 .h1 {
        position: absolute;
-    width: 340px;
+    width: 400px;
     left: 6.96%;
-    right: 74.72%;
+    right: 80%;
     top: 1.61%;
-    bottom: 1.89%;
+    bottom: 2%;
     background: #4E626D;
 }
 
 .fotoperfil {
     position: absolute;
-    width: 250px;
-    height: 250px;
-    left: 50px;
+    width: 300px;
+    height: 300px;
+    left: 15%;
     top: 13px;;
 }
 
@@ -179,10 +180,10 @@ color: #000000;
 .shabilidades{
     box-sizing: border-box;
     position: absolute;
-    width: calc(50% - 581px/2 + 74.5px);
+    width: calc(127% - 581px/2 + 74.5px);
     height: 333px;
-    left: calc(30% - 581px/2 + 74.5px);
-    top: calc(73% - 59px/2 - 421.5px);
+    left: calc(70% - 581px/2 + 74.5px);
+    top: calc(74% - 59px/2 - 421.5px);
     border-radius: 20px;
   }
 .hhabilidades{
