--- a/Reto/Reto_1/css/style.css
+++ b/Reto/Reto_1/css/style.css
@@ -294,6 +294,9 @@ nav ul {
     }
     .attribution {
         margin-top: 25px;
+        display: flex;
+        justify-content: center;
+        align-items: center
     }
     .visible {
         display: block;
