--- a/Javascrips/style.css
+++ b/Javascrips/style.css
@@ -2,13 +2,13 @@
 body {
     font-family: Arial, sans-serif;
     margin: 0;
-    padding: 0;
+    padding: 5px;
   }
   
   .container {
     max-width: 800px;
-    margin: 0 auto;
-    padding: 20px;
+    margin: auto;
+    padding: 5px;
   }
   
   h1 {
@@ -33,7 +33,7 @@ body {
   /* Estilos para pantallas pequeñas */
   @media screen and (max-width: 600px) {
     .container {
-      padding: 10px;
+      padding: 5px;
     }
   }
   
