--- a/Javascrips/style.css
+++ b/Javascrips/style.css
@@ -1,37 +1,57 @@
+:root
+{
+  --darkreader-neutral-background: #131516;
+  --darkreader-neutral-text: #d8d4cf;
+  --darkreader-selection-background: #004daa;
+  --darkreader-selection-text: #e8e6e3;
+  
+}
+
 /* Estilos generales */
 body {
-    font-family: Arial, sans-serif;
+   
     margin: 0;
     padding: 5px;
+    background-color:var(--darkreader-selection-background);
+    border-color: var(--darkreader-selection-text);
+ 
   }
   
-  .container {
-    max-width: 800px;
+  .container  {
+    max-width: 2440px;
     margin: auto;
     padding: 5px;
+    align-items: flex-start;
+    text-shadow: 2px 2px 5px black;
+    
   }
   
   h1 {
    
-    color: #333;
+    color: var(--darkreader-neutral-backround);
+    font-family: Arial, sans-serif;
+    text-shadow: 2px 2px 5px black;
   }
   
   .button {
     display: inline-block;
     padding: 10px 20px;
     background-color: #007bff;
-    color: #fff;
+    color: blueviolet;
     border: none;
     cursor: pointer;
     transition: background-color 0.3s ease;
-  }
+    font-family: Arial, sans-serif;
+    text-shadow: 2px 2px 5px black;
+    }
+    
   
   .button:hover {
     background-color: #0056b3;
   }
   
   /* Estilos para pantallas pequeñas */
-  @media screen and (max-width: 600px) {
+  @media screen and (max-width: 900px) {
     .container {
       padding: 5px;
     }
