--- a/miestilo.css
+++ b/miestilo.css
@@ -1,86 +1,102 @@
-@media (max-width: 768px) {
-    .navegacion-principal {
-      display: none;
-    }
-    }
+@media (max-width: 900px) {
+	.navegacion-principal {
+		display: none;
+	}
+}
 
-    body {
-      background-image: linear-gradient(135deg, #ffffff, #2b282a);
-    }
+body {
+	background-image: linear-gradient(135deg, rgb(175, 167, 167), rgb(0, 78, 104));
+}
+
 header {
-  background-color: #575050;
-  color: #fff;
-  text-shadow: 2px 2px 3px black;
-  text-align: center;
-  padding: 2rem;
+	background-color: #575050;
+	color: #fff;
+	text-shadow: 2px 2px 3px black;
+	text-align: center;
+	padding: 2rem;
+}
+nav {
+	display: flex;
+	justify-content: space-between; /* Alinear elementos a los extremos */
+	align-items: center; /* Alinear verticalmente al centro */
+	flex-wrap: wrap; /* Permitir envolver los elementos */
+}
+
+.fotografia {
+	align-self: flex-start; /* Alinear a la izquierda */
+	max-width: 100%;
+	height: auto;
+	order: 1; /* Cambiar el orden */
 }
 
 nav ul {
-  display: flex;
-  justify-content: center;
-  list-style: none;
-  margin: 0;
-  padding: 0;
+	display: flex;
+	justify-content: center; /* Centrar horizontalmente */
+	list-style: none;
+	margin: 0;
+	padding: 0;
+	padding-left: 20px; /* Agrega el padding deseado */
+	padding-right: 20px; /* Agrega el padding deseado */
+	order: 2; /* Cambiar el orden */
 }
-
-nav li {
-  margin: 0 1rem;
-}
-.fotografia {
-
-    
-    box-align: left;
-    max-width: 100%;
-    height: auto;
+nav LI {
+	display: flex;
+	justify-content: center; /* Centrar horizontalmente */
+	list-style: none;
+	margin: 0;
+	padding: 0;
+	padding-left: 20px; /* Agrega el padding deseado */
+	padding-right: 20px; /* Agrega el padding deseado */
 }
 
 .logoiue {
-
-    box-align: right;
-    max-width: 100%;
-    height: auto;
+	align-self: flex-end; /* Alinear a la derecha */
+	max-width: 100%;
+	height: auto;
+	order: 3; /* Cambiar el orden */
 }
 
 footer {
-  background-image: linear-gradient(135deg, #e4800e, #2b282a);
-  color: #fff;
-  padding: 20px;
-  margin-top: 50px;
+	background-image: linear-gradient(135deg, #e4800e, #2b282a);
+	color: #fff;
+	padding: 20px;
+	margin-top: 50px;
 }
 
 .footer-content {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
 }
 
 .footer-content p {
-  margin: 0;
-  font-size: 16px;
-  font-weight: 300;
-  line-height: 1.5;
+	margin: 0;
+	font-size: 16px;
+	font-weight: 300;
+	line-height: 1.5;
 }
 
 .left {
-  text-align: left;
+	text-align: left;
 }
 
 .right {
-  text-align: right;
+	text-align: right;
 }
 
-@media screen and (max-width: 767px) {
-  footer {
-    padding: 10px;
-  }
-  
-  footer .footer-content p {
-    font-size: 14px;
-  }
-}
+@media screen and (max-width: 800px) {
+	footer {
+		padding: 10px;
+	}
 
-
-.acerca{
-  text-align: justify;
-  
+	footer .footer-content p {
+		font-size: 14px;
+	}
+	
+	header {
+		padding: 1rem; /* Ajusta el padding para pantallas más pequeñas */
+	}
+	
+	nav{
+	  	padding: 1rem;
 }
