--- a/Javascrips/style.css
+++ b/Javascrips/style.css
@@ -1,59 +1,64 @@
-:root
-{
-  --darkreader-neutral-background: #131516;
-  --darkreader-neutral-text: #d8d4cf;
-  --darkreader-selection-background: #004daa;
-  --darkreader-selection-text: #e8e6e3;
-  
+:root {
+  --primary-color: #4285f4; /* Color principal */
+  --secondary-color: #fbbc05; /* Color secundario */
+  --background-color: #f8f8f8; /* Color de fondo */
+  --text-color: #333333; /* Color de texto */
 }
 
 /* Estilos generales */
 body {
-   
-    margin: 0;
+  margin: 0;
+  padding: 5px;
+  background-color: var(--background-color);
+  color: var(--text-color);
+  font-family: Arial, sans-serif;
+}
+
+.container {
+  max-width: 100%;
+  margin: auto;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
+h1 {
+  color: var(--primary-color);
+  margin-top: 0;
+}
+
+.label {
+  margin-bottom: 5px;
+}
+
+.input {
+  padding: 5px;
+  border: 1px solid var(--primary-color);
+}
+
+.button {
+  display: inline-block;
+  padding: 10px 20px;
+  background-color: var(--primary-color);
+  color: #ffffff;
+  border: none;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.button:hover {
+  background-color: #2962c0;
+}
+
+.result {
+  margin-top: 10px;
+}
+
+/* Estilos para pantallas pequeñas */
+@media screen and (max-width: 900px) {
+  .container {
     padding: 5px;
-    background-color:var(--darkreader-selection-background);
-    border-color: var(--darkreader-selection-text);
- 
   }
-  
-  .container  {
-    max-width: 2440px;
-    margin: auto;
-    padding: 5px;
-    align-items: flex-start;
-    text-shadow: 2px 2px 5px black;
-    
-  }
-  
-  h1 {
-   
-    color: var(--darkreader-neutral-backround);
-    font-family: Arial, sans-serif;
-    text-shadow: 2px 2px 5px black;
-  }
-  
-  .button {
-    display: inline-block;
-    padding: 10px 20px;
-    background-color: #007bff;
-    color: blueviolet;
-    border: none;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-    font-family: Arial, sans-serif;
-    text-shadow: 2px 2px 5px black;
-    }
-    
-  
-  .button:hover {
-    background-color: #0056b3;
-  }
-  
-  /* Estilos para pantallas pequeñas */
-  @media screen and (max-width: 900px) {
-    .container {
-      padding: 5px;
-    }
-  }
-  
+}
