--- a/Consultas/estconsu.css
+++ b/Consultas/estconsu.css
@@ -1,30 +1,45 @@
 * {
   box-sizing: border-box;
 }
+
 body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
-  background-color: black;
+  background-color: #222222;
 }
+
+
+.titulo {
+  text-align: center;
+  color: #ffffff;
+  font-size: 48Px;
+  font-weight: bold;
+  margin-top: 30px;
+  padding: 10px;
+  text-shadow: 2px 2px 5px #080808;
+}
+
 h2 {
-  background-color: #000000;
+  background-color: #222222;
   color: #ffffff;
   font-size: 24px;
   font-weight: bold;
   margin-top: 30px;
   padding: 10px;
   text-align: center;
-  text-shadow: 2PX 2PX 5PX #080808;
+  text-shadow: 2px 2px 5px #080808;
 }
+
 .container {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   margin: 30px;
 }
+
 .card {
-  background-color: #0ebfd6;
+  background-color: #007bff;
   border-radius: 35px;
   box-shadow: 0 2px 4px rgba(46, 1, 66, 0.774);
   margin: 20px;
@@ -32,16 +47,30 @@ h2 {
   padding: 25px;
   text-align: justify;
 }
+
 .card h3 {
-  color: #333;
+  color: #222222;
   font-size: 20px;
   font-weight: bold;
   margin-top: 0;
-  
 }
+
 .card p {
   color: #ffffff;
   font-size: 16px;
   line-height: 1.5;
   margin: 20px 0;
+}
+
+/* Estilos responsive */
+@media only screen and (max-width: 600px) {
+  .container {
+    margin: 10px;
+  }
+
+  .card {
+    max-width: 100%;
+    margin: 10px;
+    padding: 15px;
+  }
 }
