--- a/proyecto/css/stylein.css
+++ b/proyecto/css/stylein.css
@@ -43,24 +43,28 @@ h1 {
 }
 
 .input-field {
-    width: 100%;
-    padding: 8px;
-    font-size: 16px;
-    border: 1px solid #ccc;
-    border-radius: 3px;
+  box-sizing: border-box; /* Incluir el padding y el borde en el ancho total */
+  width: calc(100% - 1px); /* Restar el ancho del padding izquierdo y derecho */
+  padding: 7px;
+  font-size: 18px;
+  border: 1px solid #ccc;
+  border-radius: 3px;
 }
 
+
 .submit-button {
-    width: 100%;
-    padding: 10px;
-    font-size: 16px;
-    font-weight: bold;
-    color: #fff;
-    background-color: #007bff;
-    border: none;
-    border-radius: 3px;
-    cursor: pointer;
+  box-sizing: border-box; /* Incluir el padding y el borde en el ancho total */
+  width: 100%;
+  padding: 12px;
+  font-size: 18px;
+  font-weight: bold;
+  color: #fff;
+  background-color: #007bff;
+  border: none;
+  border-radius: 3px;
+  cursor: pointer;
 }
+
 
 .submit-button:hover {
     background-color: #0056b3;
